# tocomo

./: .gitignore  Dockerfile  README.md  SECURITY.md  devenv.nix  devenv.yaml  docker-compose.yml  radixconfig.yaml  reactions.py
.github/workflows/: test.yaml  test_backend.yaml
backend/: .env.template  Dockerfile  analysis.ipynb  corrosion_calc.py  main.py  pyproject.toml  reactions.py  test_reactions.py
backend/src/co2specdemo_backend/: __main__.py  app.py  authentication.py  reactions.py
backend/src/tocomo/: __main__.py  app.py  authentication.py  corrosion_calc.py
backend/tests/: test_endpoints.py  test_reactions.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  ChemInputs.tsx  Config.tsx  DropdownComponent.tsx  Form.tsx  Header.tsx  Heatmap.tsx  History.tsx  Output.tsx  input.ts  main.tsx  util.ts  vite-env.d.ts
